# diane_on_jetson

./: .gitignore  Dockerfile.tegra  README.md  docker-compose.yml  istruzioni.txt  istruzioni_pointcloud.txt  my_builder.sh  my_run.sh  ros_entrypoint.sh  zed_capture.py
backup_non_bloocate_encoder/log/: latest_build
backup_nuova_versione/log/: latest_build
compressedmsgedited/point_cloud_transport_plugins-humble/diane_point_cloud_transport/: CMakeLists.txt
compressedmsgedited/point_cloud_transport_plugins-humble/diane_point_cloud_transport/include/diane_point_cloud_transport/: diane_encoder.hpp  diane_publisher.hpp
compressedmsgedited/point_cloud_transport_plugins-humble/diane_point_cloud_transport/src/: diane_publisher.cpp  diane_subscriber.cpp
data/launcher_zed_pointcloud_finale/: log_bw1000000_fps30.csv  log_bw3180005_fps30.csv  log_bw40101476_fps30.csv  log_bw8000000000_fps30.csv
data/launcher_zed_pointcloud_new/: log_bw10650_fps18.csv  log_bw23810000_fps2.csv  log_bw23810000_fps30.csv  log_bw24110_fps18.csv  log_bw24110_fps21.csv  log_bw26500000_fps2.csv  log_bw26500000_fps8.csv  log_bw3080000_fps18.csv  log_bw3080000_fps9.csv  log_bw322760_fps15.csv  log_bw322760_fps24.csv  log_bw5660_fps17.csv  log_bw5660_fps18.csv  log_bw60700_fps21.csv  log_bw60700_fps24.csv  log_bw7270000_fps8.csv  log_bw7270000_fps9.csv  log_bw794790_fps15.csv  log_bw794790_fps18.csv  log_bw8000000000_fps30.csv
data/launcher_zed_pointcloud_updated/: log_bw1210000_fps17.csv  log_bw1210000_fps22.csv  log_bw15270000_fps30.csv  log_bw15270000_fps5.csv  log_bw16680_fps10.csv  log_bw16680_fps22.csv  log_bw3650_fps13.csv  log_bw3650_fps20.csv  log_bw380850_fps17.csv  log_bw41950_fps10.csv  log_bw41950_fps17.csv  log_bw5970000_fps22.csv  log_bw5970000_fps7.csv  log_bw6230_fps13.csv  log_bw6230_fps22.csv  log_bw8000000000_fps30.csv  log_bw8700000_fps5.csv  log_bw8700000_fps7.csv
data/minimabanda/: log_bw1000000_fps12.csv  log_bw1000000_fps14.csv  log_bw1000000_fps15.csv  log_bw1000000_fps16.csv  log_bw2530000_fps12.csv  log_bw2530000_fps16.csv  log_bw4850000_fps2.csv  (+4 more)
(+182 files in other folders)
